# django-sample

./: .env.example  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  serializers.py  views.py
users/migrations/: 0001_initial.py
